tigerlilly-wordpress-mysql/wordpress-deployment.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: tigerlilly
  labels:
    app: tigerlilly
spec:
  selector:
    matchLabels:
      app: tigerlilly
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tigerlilly
        tier: frontend
    spec:
      dnsPolicy: "None"
      dnsConfig:
      # options ndots:5 aus herkömmlicher /etc/resolv.conf muss unbedingt weg!
        nameservers:
          - 10.43.0.10
        searches:
          - default.svc.cluster.local
          - svc.cluster.local
          - cluster.local
          - vserver-on.de
      containers:
      - image: snukon3/php-opcache-fpm-wp:7.4-5.6.0
        name: tigerlilly
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: tigerlilly-persistent-storage
          mountPath: /var/www/html
      - image: nginx
        name: nginx
        imagePullPolicy : IfNotPresent
        volumeMounts:
        - name: tigerlilly-persistent-storage
          mountPath: /var/www/html
        - name: nginxconf
          mountPath: /etc/nginx/conf.d
          readOnly: true
      volumes:
      - name: tigerlilly-persistent-storage
        persistentVolumeClaim:
          claimName: tigerlilly-pv-claim
      - name: nginxconf
        configMap:
          defaultMode: 256
          name: nginxthroughpass
          optional: false
