tigerlilly-wordpress-mysql/wordpress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tigerlilly
  name: tigerlilly
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: tigerlilly
    tier: frontend
  sessionAffinity: None
  type: ClusterIP
