tigerlilly-wordpress-mysql/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "192m"
  name: tigerlilly
spec:
  rules:
  - host: tigerlilly.life
    http:
      paths:
      - path: /
        backend:
          serviceName: tigerlilly
          servicePort: 80
  tls:
  - hosts:
    - tigerlilly.life
    secretName: tigerlilly-life-tls
